Fix missing horizontal scrollbar height

--- a/Tesserae/h5/assets/css/tss.common.css
+++ b/Tesserae/h5/assets/css/tss.common.css
@@ -377,10 +377,9 @@
     width:  100%; /* We change this, because the default of inherit from simple-bar doesn't play nice with our Stack*/
 }
 
-
-
 ::-webkit-scrollbar {
     width: 9px;
+    height: 9px;
 }
 
 ::-webkit-scrollbar-track {
